Fixed scrollbar issue on diagram style panel

--- a/src/graph_editor/styles/diagram_format_panel.scss
+++ b/src/graph_editor/styles/diagram_format_panel.scss
@@ -4,3 +4,7 @@
     top: 1px;
   }
 }
+
+.panel-container.diagram-view-panel {
+  padding-right: 0;
+}
